<resources>
    <string name="app_name">وصول مطالبات</string>

    <string name="error">خطا</string>
    <string name="error_not_update_1">همکار گرامی لطفا نسخه به روز شده اپلیکیشن را از منوی تنظیمات  بخش به روز رسانی دریافت نمایید</string>
    <string name="error_not_update_2">لطفا نسخه به روز شده اپلیکیشن را از فهرست فوری، بخش به روز رسانی دریافت نمایید.</string>
    <string name="error_call_backup">همکار گرامی مشکلی در دریافت اطلاعات این بخش به وجود آمد، با پشتیبان بخش اسناد تماس حاصل فرمایید.</string>
    <string name="error_not_auth">ممجوزهای دسترسی به شما اعطا نشده است، با پشتیبان تماس گرفته و از برنامه خارج و مجددا وارد شوید.</string>
    <string name="error_bill_id">شناسه قبض صحیح نمیباشد.</string>
    <string name="error_disconnected">برقراری ارتباط حین جابجایی اطلاعات با خطا مواجه شد</string>
    <string name="error_connection">خطا در جابجایی اطلاعات، اتصالات خود را بررسی و مجدد تلاش کنید.</string>
    <string name="error_unknown">خطای ناشناخته رخ داده است.</string>
    <string name="error_code">\nکد خطا:</string>
    <string name="error_external_storage_is_not_writable">حافظه خارجی قابلی نوشتن نیست.</string>
    <string name="error_in_record_voice">در ضبظ صدا مشکلی به وجود آمد</string>
    <string name="error_in_play_voice">در پخش صدا مشکلی به وجود آمد</string>
    <string name="dear_user">همکار گرامی!</string>
    <string name="error_other">در حال حاضر خدمات مقدور نمیباشد، لطفا مجددا تلاش فرمایید.</string>
    <string name="error_internal">با عرض پوزش، سرور در حال به روزرسانی، لطفا دقایقی دیگر امتحان فرمایید.</string>
    <string name="error_input">ورودی های خود را چک کنید.</string>
    <string name="error_change_server">سرور در حال تغییرات است، لطفا منتظر بمانید و در صورت برطرف نشدن مشکل با پشتیبان تماس حاصل فرمایید.</string>
    <string name="error_user_password">نام کاربری و گذرواژه در سیستم موجود نیست، لطفا در ورود اطلاعات دقت قرمایید.</string>
    <string name="error_empty">این فیلد باید پر شود.</string>
    <string name="error_is_not_match">نام کاربری و گذرواژه با یکدیگر مطابقت ندارند</string>

    <string name="canceled">عملیات متوقف شد.</string>
    <string name="waiting">لطفا صبر کنید…</string>
    <string name="turn_internet_on">اینترنت وصل نیست، اینترنت وایفای یا همراه خود را روشن کنید.</string>
    <string name="copy_right">شبکه تارنما سپاهان</string>
    <string name="version">نسخه</string>
    <string name="username">نام کاربری</string>
    <string name="password">گذرواژه</string>
    <string name="login">ورود</string>
    <string name="save">ذخیره</string>
    <string name="accepted">ادامه</string>
    <string name="confirm">تایید</string>
    <string name="ok">تایید</string>
    <string name="dont_show_again">دیگر نمایش نده</string>
    <string name="ex_msg_dialog_choice_confirm">Confirm button is only for multi choice lists. You must call setMultiChoiceItems first</string>
    <string name="ex_msg_dialog_view_not_set">You must call method setView before calling configureView.</string>
    <string name="amount">مبلغ</string>
    <string name="rial">ریال</string>
    <string name="purchase">خرید</string>
    <string name="bill_id">شناسه قبض</string>
    <string name="purchase_id">شناسه پرداخت</string>
    <string name="bill_payment">پرداخت قبض</string>
    <string name="select_purchase_way">روش خرید را انتخاب نمایید.</string>
    <string name="normal_purchase">خرید عادی</string>
    <string name="bon_purchase">خرید با بن کارت</string>
    <string name="exit">خروج</string>
    <string name="download">بارگیری</string>
    <string name="upload">بارگذاری</string>
    <string name="start">شروع کار</string>
    <string name="reports">گزارشات</string>
    <string name="help">راهنما</string>
    <string name="home">خانه</string>

    <string name="gps_setting">تنظیمات جی پی اس</string>
    <string name="setting">تنظیمات</string>
    <string name="allow_permission">اعطای دسترسی</string>
    <string name="close">بستن</string>
    <string name="active_gps">مکان یابی شما غیر فعال است، با مراجعه به تنظیمات، آن را فعال کنید.</string>
    <string name="confirm_permission">جهت استفاده از برنامه مجوزهای پیشنهادی را قبول فرمایید</string>
    <string name="if_reject_permission">در صورت رد این مجوز قادر به استفاده از این دستگاه نخواهید بود\nلطفا با فشار دادن دکمه اعطای دسترسی و سپس در بخش دسترسی ها با این مجوز ها موافقت نمایید</string>
    <string name="access_granted">مجوز ها داده شده</string>
    <string name="active_network">اینترنت شما غیر فعال است، با مراجعه به تنظیمات، آن را فعال کنید.</string>
    <string name="network_setting">تنظیمات اینترنت</string>
    <string name="services_is_not_available">سرویس در دسترس  نیست</string>
    <string name="google_is_not_available">سرویس های گوگل برای شما در دسترس نیست.</string>
    <string name="google_is_available_but_not_installed">سرویس های گوگل در دسترس است، گوگل پلی نصب را نصب کنید.</string>
    <string name="permission_not_completed">مجوزها کامل نیست، پس از اعطای دسترسی کامل، مجددا تلاش کنید.</string>

    <string name="how_to_exit">جهت خروج، از فهرست، گزینه «خروج» را بزنید.</string>
    <string name="navigation_drawer_open">باز کردن منو</string>
    <string name="navigation_drawer_close">بستن منو</string>
    <string name="payment_result">نتیجه پرداخت</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="debt">بدهی</string>
    <string name="sort_by">مرتب کردن بر اساس</string>
    <string name="status">وضعیت اشتراک</string>
    <string name="search">جستجو</string>
    <string name="print">چاپ</string>
    <string name="not_found">داده ای یافت نشد!</string>
    <string name="address">نشانی</string>
    <string name="radif">ردیف</string>
    <string name="track_number">شماره پیگیری</string>
    <string name="mobile">موبایل</string>
    <string name="last_pay_day">آخرین پرداخت</string>
    <string name="debt_more_than">بدهی بیش از</string>
    <string name="details">جزئیات</string>
    <string name="submit">ثبت وضعیت</string>
    <string name="printer_has_problem">پرینتر با مشکل مواجه است.</string>
    <string name="total_number">تعداد کل</string>
    <string name="_0">0</string>
    <string name="reading_number">خوانده شده</string>
    <string name="payed">پرداخت شده</string>
    <string name="map">نقشه</string>
    <string name="submit_status">ثبت وضعیت</string>
    <string name="no_payment">بدون پرداختی</string>
    <string name="repetitive">مراجعه مجدد</string>
    <string name="description">توضیحات</string>
    <string name="date">تاریخ</string>
    <string name="payment">مبلغ</string>
    <string name="bills">قبوض</string>
</resources>