<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/border_white_1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/low_dp"
            android:gravity="center"
            android:paddingLeft="@dimen/medium_dp"
            android:paddingTop="@dimen/large_dp"
            android:paddingRight="@dimen/medium_dp"
            android:paddingBottom="@dimen/large_dp"
            android:text="@string/select_purchase_way"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_normal_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_dp"
            android:background="@drawable/border_blue_1"
            android:text="@string/normal_purchase"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/button_bon_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_dp"
            android:background="@drawable/border_blue_1"
            android:text="@string/bon_purchase"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
</LinearLayout>