<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_dp"
    tools:context=".activities.ReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_gray_3"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/low_dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_view_read"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/img_not_read"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_dp"
                android:orientation="horizontal"
                android:padding="@dimen/medium_dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_number"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/text_view_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/text_color_dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_dp"
                android:orientation="horizontal"
                android:padding="@dimen/medium_dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/payed"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/text_view_payed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/text_color_dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_dp"
                android:orientation="horizontal"
                android:padding="@dimen/medium_dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reading_number"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/text_view_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/text_color_dark" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>