<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    tools:context="com.leon.receipt_receivables.fragments.SearchFragment">

    <LinearLayout
        android:id="@+id/linear_layout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/medium_dp"
        android:paddingRight="@dimen/medium_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/low_dp"
            android:orientation="horizontal"
            android:weightSum="4"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/low_dp"
                android:layout_marginBottom="@dimen/low_dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/name"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_medium"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/low_dp"
                android:layout_weight="1"
                android:background="@drawable/border_gray_1"
                android:gravity="center"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingTop="@dimen/medium_dp"
                android:paddingBottom="@dimen/medium_dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/low_dp"
                android:layout_marginBottom="@dimen/low_dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/family"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_medium"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/edit_text_family"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/low_dp"
                android:layout_weight="1"
                android:background="@drawable/border_green_1"
                android:gravity="center"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingTop="@dimen/medium_dp"
                android:paddingBottom="@dimen/medium_dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/low_dp"
            android:orientation="horizontal"
            android:weightSum="4"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/text_view_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/low_dp"
                android:layout_weight="1"
                android:background="@drawable/border_gray_1"
                android:gravity="center"
                android:lines="1"
                android:maxLines="1"
                android:paddingTop="@dimen/medium_dp"
                android:paddingBottom="@dimen/medium_dp"
                android:singleLine="true"
                tools:ignore="Autofill,InefficientWeight,LabelFor" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_form"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/low_dp"
        android:background="@drawable/border_green_1"
        android:paddingLeft="@dimen/medium_dp"
        android:paddingRight="@dimen/medium_dp"
        android:text="@string/search"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/text_size_medium"
        tools:ignore="ObsoleteLayoutParam,RelativeOverlap,RtlHardcoded" />
</RelativeLayout>